# undertasker

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: compile.yml
assets/: build.rs  installer.iss
src/: brush.rs  button.rs  close_button.rs  command.rs  core.rs  edit.rs  font.rs  listbox.rs  main.rs  model.rs  util.rs  utils.rs  window.rs
ui/: ui.slint
