[package]
name = "undertasker"
version = "0.1.0"
authors = ["Brayden Carlson <braycarlson@hotmail.com>"]
edition = "2021"
build = "assets/build.rs"

[dependencies]
i-slint-backend-winit = "=1.3.2"
image = { version = "0.24.0", default-features = false, features = [ "ico" ] }
rfd = "0.13.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.1"
slint = { version = "1.3.0", features = ["renderer-winit-skia", "serde"] }
winapi = { version = "0.3.9", features = [
        "combaseapi",
        "commdlg",
        "errhandlingapi",
        "libloaderapi",
        "objbase",
        "shobjidl",
        "winbase",
        "wincon",
        "windowsx",
        "winerror",
        "wingdi",
        "winuser"
]}
winit = "0.29.10"

[build-dependencies]
slint-build = "1.3.0"
winres = "0.1.11"
