[package]
name = "undertasker"
version = "0.1.0"
authors = ["Brayden Carlson <braycarlson@hotmail.com>"]
edition = "2018"
build = "assets/build.rs"

[build-dependencies]
winres = "0.1.11"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
winapi = { version = "0.3.9", features = [
        "combaseapi",
        "commdlg",
        "errhandlingapi",
        "libloaderapi",
        "objbase",
        "shobjidl",
        "winbase",
        "wincon",
        "windowsx",
        "winerror",
        "wingdi",
        "winuser"
]}
