[package]
name = "undertasker"
version = "0.0.1"
authors = ["Brayden Carlson <braycarlson@hotmail.com>"]
edition = "2021"
build = "assets/build.rs"

[dependencies]
image = { version = "0.25.9", default-features = false, features = [ "ico" ] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = { version = "1.15.1", features = ["renderer-winit-femtovg", "serde", "unstable-winit-030"] }
winapi = { version = "0.3.9", features = [
        "combaseapi",
        "commdlg",
        "errhandlingapi",
        "libloaderapi",
        "objbase",
        "shobjidl",
        "winbase",
        "wincon",
        "windowsx",
        "winerror",
        "wingdi",
        "winuser"
]}

[build-dependencies]
slint-build = "1.15.1"
winres = "0.1.12"
